Converted to new format, small trans edits

--- a/01_agama/ekottarika/19/EA_19_01.md
+++ b/01_agama/ekottarika/19/EA_19_01.md
@@ -1,59 +1,90 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 19. The Request | 1. Brahmā’s Request'
+title: 'The Numerical Discourses | Chapter 19: The Request | 1. Brahmā’s Request'
 type: kramdown
 base: ../../../
 previous: ../16/EA_16_10.html
 next: EA_19_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 19: The Request
-### 1. Brahmā’s Request
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 19: The Request</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was under the bodhi tree in Magadha.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（一） 非梵法</th>
+  <th class='en'>1. Brahmā’s Request</th>
+  <tr>
+    <td class='ch' title='t125.2.593a24'>聞如是： 一時，佛在摩竭國道場樹下。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was under the <em>bodhi tree</em> in Magadha.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593a24'>爾時，世尊得道未久，便生是念： 「我今甚深之法難曉、難了、難可覺知。 不可思惟、休息、微妙。 智者所覺知能分別義、理。 習之不厭即得歡喜。 設吾與人說妙法者，人不信受，亦不奉行者。唐有其勞，則有所損。 我今宜可默然。 何須說法？」</td>
+    <td id='p2'>2. Soon after he had attained his awakening, the Bhagavān had this thought: “Now, my teaching is profound, hard to understand, hard to comprehend, and hard to recognize. It’s inconceivable, peaceful, and subtle. It’s recognized by wise people who can discern its purpose and principle. Training untiringly, they then become joyous. Supposing I were to explain this wonderful teaching to people, some of them wouldn’t believe it and wouldn’t approve of it. It would be a waste, it’d be troublesome, and it’d be for nothing. Quietude would be fitting for me now. What need is there to explain this teaching?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b1'>爾時，梵天在梵天上，遙知如來所念。 猶如士夫屈伸臂頃，從梵天上沒不現，來至世尊所。 頭面禮足，在一面住。</td>
+    <td id='p3'>3. It was then that the god Brahmā up in the Brahma Heaven knew the Tathāgata’s thoughts from a distance. In the time it takes a man to flex his arm, he disappeared from the Brahma Heaven and came to the Bhagavān. He bowed his head at his feet and stood to one side.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b4'>爾時，梵天白世尊曰： 「此閻浮提必當壞敗，三界喪目。 如來、至真、等正覺出現於世。 應演法寶，然今復不暢演法味。 唯願如來普為眾生廣說深法！</td>
+    <td id='p4'>4. Brahmā then said to the Bhagavān, “Here, Jambudvīpa is sure to be destroyed, and the three realms will lose their sight! The Tathāgata, Arhat, and Completely and Rightly Awakened One has arisen in the world. He ought to proclaim the jewel of the teaching, yet he still hasn’t uttered the teaching’s essence. May the Tathāgata widely explain the profound teaching to all sentient beings!</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b7'>又此眾生根原易度。 若不聞者，永失法眼。 此應為法之遺子。 猶如優鉢蓮華、拘牟頭華、分陀利華，雖出於地，未出水上，亦未開敷。 是時，彼華漸漸欲生，故未出水。 或時此華以出水上，或時此華不為水所著。 此眾生類亦復如是。 為生、老、病、死所見逼促，諸根應熟。 然不聞法而便喪者，不亦苦哉。 今正是時。 唯願世尊當為說法！」</td>
+    <td id='p5'>5. “Moreover, these sentient beings are easily liberated at their root. If they don’t hear it, they’ll forever miss out on the Dharma eye. This is a teaching that should have disciples to inherit it. They’re like the blue, red, or white lotus flowers that emerge from mud but haven’t risen above the water and bloomed yet. Those flowers slowly grow while they’re under the water. Some of them emerge from the water, and some of them have no water clinging to them [after they emerge]. This type of sentient being is likewise. They are harassed by birth, old age, illness, and death, and their faculties ripen as a result. If they don’t hear the teaching, they’ll still die, but their suffering won’t. Now is the right time. Please explain the teaching for them, Bhagavān!”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b15'>爾時，世尊知梵天心中所念，又慈愍一切眾生故，說此偈曰：</td>
+    <td id='p6'>6. Because he knew the thoughts in Brahmā’s mind and had compassion for all sentient beings, the Bhagavān then spoke these verses:</td>
+  </tr>
+<tr>
+  <td title='t125.2.593b17'><ul class='verse'>
+    <li class='ch'>「梵天今來勸：<br/>
+    『如來，開法門！<br/>
+    聞者得篤信，<br/>
+    分別深法要。』</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>“Now, Brahmā has come to encourage me:<br/>
+    ‘Tathāgata, open the Dharma door!<br/>
+    Those who hear and become devoted believers<br/>
+    Will discern the profound teaching’s meaning.’</li>
+  </ul></td>
+</tr>
+<tr>
+  <td title='t125.2.593b19'><ul class='verse'>
+    <li class='ch'>猶在高山頂，<br/>
+    普觀眾生類。<br/>
+    我今有此法，<br/>
+    昇堂現法眼。」</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>Like standing atop a high mountain,<br/>
+    I see all kinds of sentient beings.<br/>
+    Now that I possess this teaching,<br/>
+    I’ll ascend to the hall and reveal the Dharma eye.”</li>
+  </ul></td>
+</tr>
+  <tr>
+    <td class='ch' title='t125.2.593b21'>爾時，梵天便作是念： 「如來必為眾生說深妙法！」 歡喜踊躍，不能自勝。 頭面禮足已，即還天上。</td>
+    <td id='p7'>7. Brahmā then thought: “Surely the Tathāgata will explain the profound teaching for sentient beings!” He rejoiced and celebrated, unable to control himself. He bowed his head at the Buddha’s feet and went back up to his heaven.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b23'>爾時，梵天聞佛所說歡喜，奉行。</td>
+    <td id='p8'>8. When Brahmā heard what the Buddha taught, he then rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. Soon after he had attained enlightenment, the Bhagavān had this thought: “Now, my teaching is profound, hard to understand, hard to comprehend, and hard to recognize. It’s inconceivable, at rest, and subtle. It’s recognized by wise people who can discern its purpose and principle. Training untiringly, they then will become joyous. Supposing I were to explain this wonderful teaching to people, some of them wouldn’t believe it and wouldn’t approve of it.  It would be a waste, it’d be troublesome, and it’d be for nothing. Quietude would be fitting for me now. What need is there to explain this teaching?”
-{: #p2}
+<hr/>
 
-3\. It was then that the god Brahmā up in the Brahma Heaven knew the Tathāgata’s thought from a distance. In the time it takes a man to flex his arm, he disappeared from the Brahma Heaven and came to the Bhagavān. He bowed his head at his feet and stood to one side.
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. Brahmā then said to the Bhagavān, “Here, Jambudvīpa is sure to be destroyed, and the triple realm will lose its eyes! The Tathāgata, Arhat, and Completely and Rightly Awakened One has arisen in the world. He ought to proclaim the jewel of the teaching, yet he still hasn’t uttered the teaching’s essence. May the Tathāgata widely explain the profound teaching to all sentient beings!
-{: #p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0593a24" target="_blank">T125.2.593a24-b23</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn6.1" target="_blank">SN 6.1</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Moreover, these sentient beings are easily liberated at their root. If they don’t hear it, they’ll forever miss out on the Dharma eye. This is a teaching that should have disciples to inherit it. They’re like the blue, red, or white lotus flowers that emerge from mud but haven’t risen above the water and bloomed yet. Those flowers slowly grow while they’re under the water. Some of them emerge from the water, and some of them have no water clinging to them [after they emerge]. This type of sentient being is likewise. They are harassed by birth, old age, illness, and death, and their faculties ripen as a result. If they don’t hear the teaching, they’ll still die, but their suffering won’t. Now is the right time. Please explain the teaching for them, Bhagavān!”
-{: #p5}
-6\. Because he knew the thoughts in Brahmā’s mind and had compassion for all sentient beings, the Bhagavān then spoke these verses:
-{: #p6}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 19 December 2024</p>
 
-* {:.verse}“Now, Brahmā has come encouraging\\
-The Tathāgata, ‘Open the Dharma door!\\
-Those who hear and become devoted believers\\
-Will discern the profound teaching’s meaning.’
-* {:.verse}Like standing atop a high mountain,\\
-I see all kinds of sentient beings.\\
-Now that I possess this teaching,\\
-I’ll ascend to the hall and reveal the Dharma eye.”
-
-7\. Brahmā then thought: “Surely the Tathāgata will explain the profound teaching for sentient beings!” He rejoiced and celebrated, unable to control himself. He bowed his head at the Buddha’s feet and went back up to his heaven.
-{:#p7}
-
-8\. When Brahmā heard what the Buddha taught, he then rejoiced and approved.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This sūtra is parallel with [SN 6.1](https://suttacentral.net/sn6.1){: target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 July 2021
-{: .revised}
-
----
+<hr/>
