--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -1,44 +1,71 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 19. The Request | 2. Two Extremes'
+title: 'The Numerical Discourses | Chapter 19: The Request | 2. Two Things'
 type: kramdown
 base: ../../../
 previous: EA_19_01.html
 next: ../24/EA_24_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 19: The Request
-### 2. Two Things
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 19: The Request</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（二） 二事</th>
+  <th class='en'>2. Two Things</th>
+  <tr>
+    <td class='ch' title='t125.2.593b24'>聞如是： 一時，佛在波羅㮈國、仙人鹿苑中。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b25'>爾時，世尊告諸比丘： 「有此二事，學道者不應親近。 云何為二事？ 所謂著欲及樂之法，此是下卑凡賤之法，又此諸苦眾惱百端。 是謂二事學道者不應親近。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are these two things that someone training on the path should not go near. What are these two things? They are attachment to [1] desire, pleasurable things, which are inferior, common, and base things, and [2] all the many forms of hardship and mortification. These are called the two things that someone training on the path should not go near.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593b28'>「如是，捨此二事已，我自有至要之道得成正覺。 眼生、智生，意得休息。 得諸神通，成沙門果，至於涅槃。</td>
+    <td id='p3'>3. “Thus, after abandoning these two things, I myself possessed the essential path to achieving right awakening. Vision and knowledge arose, and my mind became peaceful. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at <em>nirvāṇa</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593c2'>「云何為至要之道得成正覺，眼生、智生，意得休息，得諸神通，成沙門果，至於涅槃？ 所謂此賢聖八品道是，所謂等見、等治、等語、等業、等命、等方便、等念、等定。 此名至要之道。</td>
+    <td id='p4'>4. “What is that essential path that achieves right awakening, gives rise to vision and knowledge, makes the mind peaceful, attains the penetrating knowledges and the fruits of the ascetic, and arrives at <em>nirvāṇa</em>? It’s this noble eightfold path, which refers to right view, right discipline, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>. This is called the essential path.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593c6'>「今我得成正覺。 眼生、智生，意得休息。 得諸神通，成沙門果，至於涅槃。 如是，諸比丘，當學捨上二事，習於至要之道。 如是，諸比丘，當作是學。」</td>
+    <td id='p5'>5. “Now, I’ve achieved right awakening. Vision and knowledge arose, and my mind became peaceful. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at <em>nirvāṇa</em>. Thus, monks, you should train by abandoning the above two things and practicing the essential path. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='t125.2.593c9'>爾時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p6'>6. The monks who heard what the Buddha taught then rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.593c11'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='t125.2.593c11'><ul class='verse'>
+    <li class='ch'>羅云、迦葉、龍<br/>
+    二難、大愛道<br/>
+    誹謗、非梵法<br/>
+    二事最在後</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[17.1] Rāhula, [18.4] Kāśyapa, [18.5] <em>nāga</em> elephant, [18.6-7] two with Nanda<br/>
+    [18.8] The path of great love, [18.9] slander, [19.1] not the way to Brahmā,<br/>
+    And [19.2] two things are last.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are these two things that someone training on the path should not go near. What are these two things? They are attachment to [1] desire, pleasurable things, and things that are inferior, common, and base and [2] all the many forms of hardship and mortification. These are called the two things that someone training on the path should not go near.
-{: #p2}
+<hr/>
 
-3\. “Thus, after abandoning these two things, I myself possessed the essential path to achieving right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa.
-{: #p3}
+<h3 id="notes">Notes</h3>
 
-4\. “What is that essential path that achieves right awakening, gives rise to vision and knowledge, stills the mind, attains the penetrating knowledges and fruits of the ascetic, and arrives at nirvāṇa? It’s this noble eightfold path, which is right view, right control, right speech, right action, right livelihood, right method, right mindfulness, and right concentration. This is called the essential path.
-{: #p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0593b24" target="_blank">T125.2.593b24-c12</a>. Partial parallels include SN 56.11 and T109. This <em>sūtra</em> includes only the material regarding the eightfold path being a middle way between two extreme types of religious practice. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “Now, I’ve achieved right awakening. Vision and knowledge arose, and my mind became still. I attained the penetrating knowledges, achieved the fruits of the ascetic, and arrived at nirvāṇa. Thus, monks, you should train by abandoning the above two things and practicing the essential path. Thus, monks, should you train.”
-{: #p5}
-6\. The monks who heard what the Buddha taught then rejoiced and approved.
-{: #p6}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 19 December 2024</p>
 
----
-
-### Notes
-
-1. {:#n1} Partial parallels include [SN 56.11](https://suttacentral.net/sn56.11){: target="_blank"} and [T109](../../other/T109.html){: target="_blank"}. This sutra includes only the material regarding the eightfold path being a middle way between two extreme types of religious practice. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 July 2021
-{: .revised}
-
----
+<hr/>
