--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -46,7 +46,7 @@ next: MA_013.html
     <td id='p8'>8. The Bhagavān then said to Vāṣpa, “If what I say is correct, you should say, ‘So it is.’ If it isn’t correct, then you should say, ‘That’s not so.’ If you have doubts about it, then you can ask me, ‘Ascetic Gautama, what’s the reason for this? What’s the meaning of that?’ If you can accept what I say, then you and I can have a discussion about this topic.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t26.1.434b17'>惒破答曰： 「沙門瞿曇，若所說是，我當言『是』。 若不是者，當言『』不是』。 我若有疑，當問瞿曇： 『瞿曇，此有何事？此有何義？』 隨沙門瞿曇所說，我則受持。 沙門瞿曇但當與我共論此事。」</td>
+    <td class="ch" title='t26.1.434b17'>惒破答曰： 「沙門瞿曇，若所說是，我當言『是』。 若不是者，當言『不是』。 我若有疑，當問瞿曇： 『瞿曇，此有何事？此有何義？』 隨沙門瞿曇所說，我則受持。 沙門瞿曇但當與我共論此事。」</td>
     <td>Vāṣpa replied, “Ascetic Gautama, if what you say is correct, I will say, ‘So it is.’ If it’s not correct, then I will say, ‘That’s not so.’ If I have doubts, I will ask Gautama, ‘Gautama, what’s the reason for this? What’s the meaning of that?’ I will then accept and retain what ascetic Gautama says about it. The ascetic Gautama will discuss this topic only with me.”</td>
   </tr>
   <tr>
@@ -55,7 +55,7 @@ next: MA_013.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.434b21'>「身生不善、口行不善、意行不善。 無明行，漏、煩熱、憂慼。 彼於後時，不善無明行滅，不更造新業。 棄捨故業，即於現世便得究竟而無煩熱。 常住不變，謂聖慧所見、聖慧所知。</td>
-    <td id='p10'>10. “As his body action was unskillful, his speech was unskillfully, and his mental action was unskillful. His ignorant actions were contaminants, afflictions, fevers, and griefs. Some time after that, he ceases his unskillful and ignorant actions and doesn’t do any new deeds. Abandoning his former deeds, he then reaches the final end in the present life and has no affliction or fever. He always lives unchanging, which is to say what is seen and known by a noble sage.</td>
+    <td id='p10'>10. “As his body action was unskillful, his speech was unskillful, and his mental action was unskillful. His ignorant actions were contaminants, afflictions, fevers, and griefs. Some time after that, he ceases his unskillful and ignorant actions and doesn’t do any new deeds. Abandoning his former deeds, he then reaches the final end in the present life and has no affliction or fever. He always lives unchanging, which is to say what is seen and known by a noble sage.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.434b21'>「云何，惒破？ 如是比丘身、口、意護，汝頗見是處，因此生不善漏，令至後世耶？」</td>
